students page added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
 
     <section id="main">
-        <section class="main-sec">
+        <section class="main-sec three-cols">
             <div class="main-div-first">
                 <p>MEET OUR BADASS STAFF</p>
             </div>
