--- a/Students.html
+++ b/Students.html
@@ -21,10 +21,10 @@
                     <a href="" class="nav-elem">
                         <p>Programs</p>
                     </a>
-                    <a href="" class="nav-elem">
+                    <a href="index.html" class="nav-elem">
                         <p>Faculty</p>
                     </a>
-                    <a href="" class="nav-elem" id="this-page">
+                    <a href="Students.html" class="nav-elem" id="this-page">
                         <p>Students</p>
                     </a>
                     <a href="" class="nav-elem">
@@ -97,34 +97,34 @@
             </div>
         </section>
         <section class="main-sec three-cols two-rows">
-                <div class="main-div-first main-div-first-small">
-                    <p id="main-div-first-mainp">NOTABLE ALUMNI</p>
-                    <div class="line"></div>
-                    <p id="main-div-first-secp">WHERE ARE THEY NOW?</p>
-                </div>
-                <div class="img-div">
-                    <div class="img-name img-name-type7">FIRST NAME</div>
-                    <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
-                        alt="">
-                </div>
-                <div class="img-div">
-                    <div class="img-name img-name-type3">FIRST NAME</div>
-                    <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
-                        alt="">
-                </div>
-                <div class="img-div">
-                    <div class="img-name img-name-type3">FIRST NAME</div>
-                    <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
-                        alt="">
-    
-                </div>
-                <div class="img-div">
-                    <div class="img-name img-name-type7">FIRST NAME</div>
-                    <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
-                        alt="">
-    
-                </div>
-            </section>
+            <div class="main-div-first main-div-first-small">
+                <p id="main-div-first-mainp">NOTABLE ALUMNI</p>
+                <div class="line"></div>
+                <p id="main-div-first-secp">WHERE ARE THEY NOW?</p>
+            </div>
+            <div class="img-div">
+                <div class="img-name img-name-type7">FIRST NAME</div>
+                <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
+                    alt="">
+            </div>
+            <div class="img-div">
+                <div class="img-name img-name-type3">FIRST NAME</div>
+                <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
+                    alt="">
+            </div>
+            <div class="img-div">
+                <div class="img-name img-name-type3">FIRST NAME</div>
+                <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
+                    alt="">
+
+            </div>
+            <div class="img-div">
+                <div class="img-name img-name-type7">FIRST NAME</div>
+                <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
+                    alt="">
+
+            </div>
+        </section>
     </section>
 </body>
 <footer>
