--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <a href="" class="nav-elem">
                         <p>Programs</p>
                     </a>
-                    <a href="index.html" class="nav-elem">
+                    <a href="index.html" class="nav-elem" id="this-page">
                         <p>Faculty</p>
                     </a>
-                    <a href="Students.html" class="nav-elem" id="this-page">
+                    <a href="Students.html" class="nav-elem">
                         <p>Students</p>
                     </a>
                     <a href="" class="nav-elem">
