h1 and header p fixed

--- a/Students.html
+++ b/Students.html
@@ -8,32 +8,36 @@
 
 <body>
     <section class="nav-main">
-        <nav>
-            <div id="logo">
-                <p id="ewu">EWU</p>
-                <p>VCD</p>
-            </div>
-            <section id="nav-main">
-                <section class="nav-sec">
-                    <a href="" class="nav-elem">
-                        <p>About</p>
-                    </a>
-                    <a href="" class="nav-elem">
-                        <p>Programs</p>
-                    </a>
-                    <a href="index.html" class="nav-elem">
-                        <p>Faculty</p>
-                    </a>
-                    <a href="Students.html" class="nav-elem" id="this-page">
-                        <p>Students</p>
-                    </a>
-                    <a href="" class="nav-elem">
-                        <p>Contact</p>
-                    </a>
-                    <a href="" class="nav-elem" id="nav-search">
-                        <div><span class="ico ico-mglass"></span></div>
-                    </a>
+        <nav id="student-nav">
+            <section class="nav-row">
+                <div id="logo">
+                    <p id="ewu">EWU</p>
+                    <p>VCD</p>
+                </div>
+                <section id="nav-main">
+                    <section class="nav-sec">
+                        <a href="" class="nav-elem">
+                            <p>About</p>
+                        </a>
+                        <a href="" class="nav-elem">
+                            <p>Programs</p>
+                        </a>
+                        <a href="index.html" class="nav-elem">
+                            <p>Faculty</p>
+                        </a>
+                        <a href="Students.html" class="nav-elem" id="this-page">
+                            <p>Students</p>
+                        </a>
+                        <a href="" class="nav-elem">
+                            <p>Contact</p>
+                        </a>
+                        <a href="" class="nav-elem" id="nav-search">
+                            <div><span class="ico ico-mglass"></span></div>
+                        </a>
+                    </section>
                 </section>
+            </section>
+            <section>
                 <section id="nav-head" class="students">
                     <h1>Students</h1>
                     <p class="nav-head-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos
@@ -42,7 +46,9 @@
                         sed ratione ullam totam dolor autem!</p>
                 </section>
             </section>
-        </nav>
+
+    </section>
+    </nav>
     </section>
 
     <section id="main">
