--- a/index.html
+++ b/index.html
@@ -9,31 +9,35 @@
 <body>
     <section class="nav-main">
         <nav>
-            <div id="logo">
-                <p id="ewu">EWU</p>
-                <p>VCD</p>
-            </div>
-            <section id="nav-main">
-                <section class="nav-sec">
-                    <a href="" class="nav-elem">
-                        <p>About</p>
-                    </a>
-                    <a href="" class="nav-elem">
-                        <p>Programs</p>
-                    </a>
-                    <a href="index.html" class="nav-elem" id="this-page">
-                        <p>Faculty</p>
-                    </a>
-                    <a href="Students.html" class="nav-elem">
-                        <p>Students</p>
-                    </a>
-                    <a href="" class="nav-elem">
-                        <p>Contact</p>
-                    </a>
-                    <a href="" class="nav-elem" id="nav-search">
-                        <div><span class="ico ico-mglass"></span></div>
-                    </a>
+            <section class="nav-row">
+                <div id="logo">
+                    <p id="ewu">EWU</p>
+                    <p>VCD</p>
+                </div>
+                <section id="nav-main">
+                    <section class="nav-sec">
+                        <a href="" class="nav-elem">
+                            <p>About</p>
+                        </a>
+                        <a href="" class="nav-elem">
+                            <p>Programs</p>
+                        </a>
+                        <a href="index.html" class="nav-elem" id="this-page">
+                            <p>Faculty</p>
+                        </a>
+                        <a href="Students.html" class="nav-elem">
+                            <p>Students</p>
+                        </a>
+                        <a href="" class="nav-elem">
+                            <p>Contact</p>
+                        </a>
+                        <a href="" class="nav-elem" id="nav-search">
+                            <div><span class="ico ico-mglass"></span></div>
+                        </a>
+                    </section>
                 </section>
+            </section>
+            <section>
                 <section id="nav-head">
                     <h1>Faculty</h1>
                     <p class="nav-head-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos
