--- a/Students.html
+++ b/Students.html
@@ -108,23 +108,23 @@
                 <div class="line"></div>
                 <p id="main-div-first-secp">WHERE ARE THEY NOW?</p>
             </div>
-            <div class="img-div">
+            <div class="img-div img-div-test">
                 <div class="img-name img-name-type7">FIRST NAME</div>
                 <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
                     alt="">
             </div>
-            <div class="img-div">
+            <div class="img-div img-div-test">
                 <div class="img-name img-name-type3">FIRST NAME</div>
-                <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
+                <img src="https://images.unsplash.com/photo-1533738699159-d0c68059bb61?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=0bb9888db1d270eab08c77f41120dfca&auto=format&fit=crop&w=934&q=80"
                     alt="">
             </div>
-            <div class="img-div">
+            <div class="img-div img-div-test">
                 <div class="img-name img-name-type3">FIRST NAME</div>
                 <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
                     alt="">
 
             </div>
-            <div class="img-div">
+            <div class="img-div img-div-test">
                 <div class="img-name img-name-type7">FIRST NAME</div>
                 <img src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a723711f2c79ac1dc3c8718d82850f30&auto=format&fit=crop&w=2231&q=80"
                     alt="">
